--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <h1>Brandon Lee Alley</h1>
   <p>Welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <h2>I love you chicken!<h2>
 </body>
 
 </html>
